objects/Relationship_Suite__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Suite Data</relationshipLabel>
        <relationshipName>Relationship_Suite_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Suite Data</relationshipLabel>
        <relationshipName>Relationship_Suite_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exec_Status_1__c</fullName>
        <label>Exec Status #1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Status_2__c</fullName>
        <label>Exec Status #2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Relationship Suite Data</relationshipLabel>
        <relationshipName>Relationship_Suite_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPR_Label__c</fullName>
        <label>PPR Label</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPR_Score_10__c</fullName>
        <label>PPR Score 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPR_Score_11__c</fullName>
        <label>PPR Score 11</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPR_Score_12__c</fullName>
        <label>PPR Score 12</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPR_Total_Score__c</fullName>
        <label>PPR Total Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_Label__c</fullName>
        <label>RB Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Score_10__c</fullName>
        <label>RB Score 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_Score_1__c</fullName>
        <label>RB Score 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_Score_2__c</fullName>
        <label>RB Score 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_Total_Score__c</fullName>
        <label>RB Total Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Relationship Suite</label>
    <nameField>
        <label>Relationship Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Suite Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>